--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -121,8 +121,8 @@ jobs:
       
         #Requires permissions.checks: write
       - name: Publish test results
-        if: ${{ inputs.output-test-results }}
-        uses: phoenix-actions/test-reporting@v10        
+        if: ${{ always() && inputs.output-test-results }}
+        uses: phoenix-actions/test-reporting@v10
         with:
           name: Test results
           path: ${{ inputs.test-results-file-pattern }}
@@ -139,5 +139,3 @@ jobs:
         # CDK infrastructure build calls npm ci on /infrastructure/build, which may fail without NODE_AUTH_TOKEN
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm-auth-token || secrets.GITHUB_TOKEN }}
-          
-
