Allowing sample env path to be configured

--- a/.github/workflows/node-build-zip.yml
+++ b/.github/workflows/node-build-zip.yml
@@ -28,6 +28,10 @@ on:
       pre-run-script:
         required: false
         type: string
+      sample-env-path:
+        required: false
+        type: string
+        default: .env.sample
     secrets:
       npm-auth-token:
         description: NPM auth token (optional, GITHUB_TOKEN is used by default)
@@ -68,7 +72,7 @@ jobs:
 
       # prepare static sites for config transformation upon later deployment
       - if: ${{ inputs.static-site }}
-        run: sed -n 's/\(${{ inputs.static-site-env-prefix }}_[A-Z0-9_]\+\)=\(.*\)/\1={{\1}}/p' .env.sample > .env && cat .env
+        run: sed -n 's/\(${{ inputs.static-site-env-prefix }}_[A-Z0-9_]\+\)=\(.*\)/\1={{\1}}/p' ${{ inputs.sample-env-path }} > .env && cat .env
 
       # run npm ci preventing script access to npm auth token
       - run: npm ci --ignore-scripts
