--- a/.github/workflows/python-uv-build-zip.yml
+++ b/.github/workflows/python-uv-build-zip.yml
@@ -14,6 +14,10 @@ on:
         required: false
         type: string
         default: 'dist'
+      artifact-name:
+        required: false
+        type: string
+        default: python-app
         
       pre-run-script:
         required: false
