--- a/.github/workflows/python-uv-build-zip.yml
+++ b/.github/workflows/python-uv-build-zip.yml
@@ -86,14 +86,13 @@ jobs:
       - name: Zip build folder
         run: |
           pushd ${{ inputs.build-path }}
-          zip -q -r ${{ inputs.artifact-name }}.zip ${{ inputs.build-globs }}
-          cp ${{ inputs.artifact-name }}.zip "$(dirs +1)"
+          zip -q -r ${{ runner.temp }}/${{ inputs.artifact-name }}.zip ${{ inputs.build-globs }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.artifact-name }}
-          path: ${{ inputs.working-directory }}/${{ inputs.artifact-name }}.zip
+          path: ${{ runner.temp }}/${{ inputs.artifact-name }}.zip
           if-no-files-found: error
 
       - name: Post-run
