Add permissions for OIDC in node-publish-public job
# Conflicts:
#	.github/workflows/node-trusted-publish-public.yml

--- a/.github/workflows/node-trusted-publish-public.yml
+++ b/.github/workflows/node-trusted-publish-public.yml
@@ -14,7 +14,8 @@ jobs:
   node-publish-public:
     runs-on: ubuntu-latest
     permissions:
-      id-token: write
+      contents: read
+      id-token: write  # Required for OIDC
     steps:
       - name: Checkout
         uses: actions/checkout@v5
