Add --ignore-scripts flag to npm ci command in npm publish workflows

--- a/.github/workflows/node-trusted-publish.yml
+++ b/.github/workflows/node-trusted-publish.yml
@@ -44,7 +44,7 @@ jobs:
             echo "NPM version $CURRENT_NPM_VERSION is sufficient (>= $REQUIRED_NPM_VERSION)"
           fi
 
-      - run: npm ci
+      - run: npm ci --ignore-scripts
 
       - run: npm run prepare --if-present
 
