--- a/.github/workflows/node-publish-public.yml
+++ b/.github/workflows/node-publish-public.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: ${{ inputs.node-version }}
           cache: 'npm'
 
-      - run: npm ci
+      - run: npm ci --ignore-scripts
 
       - run: npm run prepare --if-present
 
