--- a/.github/workflows/node-trusted-publish.yml
+++ b/.github/workflows/node-trusted-publish.yml
@@ -32,16 +32,14 @@ jobs:
           node-version: ${{ inputs.node-version }}
           cache: 'npm'
 
-      # Note: Trusted publishing requires npm CLI version 11.5.1 or later.
       - name: Ensure NPM 11.5.1 or higher
         run: |
           CURRENT_NPM_VERSION=$(npm -v)
           REQUIRED_NPM_VERSION="11.5.1"
           if [ "$(printf '%s\n' "$REQUIRED_NPM_VERSION" "$CURRENT_NPM_VERSION" | sort -V | head -n1)" != "$REQUIRED_NPM_VERSION" ]; then
-            echo "NPM version $CURRENT_NPM_VERSION is too old. Upgrading to $REQUIRED_NPM_VERSION..."
-            npm install -g npm@$REQUIRED_NPM_VERSION
-          else
-            echo "NPM version $CURRENT_NPM_VERSION is sufficient (>= $REQUIRED_NPM_VERSION)"
+            echo "❌ Error: NPM version $CURRENT_NPM_VERSION does not meet the minimum requirement of $REQUIRED_NPM_VERSION"
+            echo "Trusted publishing requires npm CLI version 11.5.1 or later."
+            exit 1
           fi
 
       - run: npm ci --ignore-scripts
