--- a/.github/workflows/node-publish-internal.yml
+++ b/.github/workflows/node-publish-internal.yml
@@ -9,10 +9,20 @@ on:
         required: false
         type: string
         default: './dist/package.json'
+      working-directory:
+        required: false
+        type: string
+        default: '.'
 
 jobs:
   node-publish-internal:
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        shell: bash
+        working-directory: ${{ inputs.working-directory }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -27,6 +37,7 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           scope: '@makerxstudio'
           cache: 'npm'
+          cache-dependency-path: ${{ inputs.working-directory }}/package-lock.json
 
       # run npm ci preventing script access to npm auth token
       - run: npm ci --ignore-scripts
